examples/errors/overlap-systems.sem
system Syntax =overlap=> Bool
system Bool =overlap=> Syntax

